<resources>
    <string name="app_name">QR/Barcode Reader</string>
    <string name="scan_using_camera">Scan using camera</string>
    <string name="product_n1ame">Product Name: </string>
    <string name="enert_you_quantity">Enter you quantity</string>
    <string name="barcode_info">Barcode info</string>
    <string name="item_code">Item Code: </string>
    <string name="product_name">Product Name: </string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="show_items">Show Items</string>
    <string name="Email">Send Email</string>
    <string name="Excel">Excel (.vcs)</string>
    <string name="text">Text (.txt)</string>
    <string name="dialog_fire_missiles">Plz Check Internet Conncetion </string>
    <string name="Alertfaild">No Internet </string>
    <string name="OK">OK</string>
    <string name="Default">Default Email </string>
    <string name="SaveandScan">Save / Scan</string>
    <string name="quantity">Quantity:</string>
    <string name="Backupfiledirectory">BackUp File Directory </string>
    <string name="Setting">SETTING</string>
    <string name="Exit">Exit</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="inventory">Inventory</string>
    <string name="Productname">Product Name : </string>
    <string name="Barcode">Bar Code : </string>
    <string name="Quantity">Quantity : </string>
    <string name="Formate"> Wipe Program Data </string>
</resources>
