<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kedr.emam.ahmad.scan.MainActivity"
    android:orientation="vertical">

    <Button

        android:text="@string/scan_using_camera"
        android:textSize="20sp"
        android:layout_marginTop="180dp"
        android:id="@+id/scan"
        android:onClick="can"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Orange"
        />
    <Button
        android:layout_marginTop="10dp"
        android:text="@string/inventory"
        android:textSize="20sp"
        android:layout_below="@id/scan"
        android:id="@+id/manual"
        android:onClick="invent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Orange"        />
    <Button
        android:layout_marginTop="10dp"
        android:text="@string/show_items"
        android:textSize="20sp"
        android:layout_below="@id/manual"
        android:id="@+id/show"
        android:onClick="show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Orange"        />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/show"
        android:layout_marginTop="14dp"
        android:background="@color/Orange"
        android:onClick="Email"
        android:text="@string/Email"
        android:textSize="20sp"
        tools:text="@string/Email" />

</RelativeLayout>
