<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light2"
    tools:context="kedr.emam.ahmad.scan.Inventory">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="368dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/layoutbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/text"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_above="@+id/num"
            android:layout_alignLeft="@+id/num"
            android:layout_alignStart="@+id/num"
            android:layout_marginBottom="32dp"
            android:background="@drawable/textviewbackground"
            android:drawableLeft="@drawable/barcode"
            android:fontFamily="casual"
            android:gravity="center"
            android:hint="@string/barcode_info"
            android:paddingLeft="5dp"
            android:textStyle="bold" />


        <EditText

            android:id="@+id/num"
            android:layout_width="300dp"
            android:layout_height="45dp"

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/textviewbackground"
            android:drawableLeft="@drawable/quality"
            android:fontFamily="casual"
            android:gravity="center"
            android:hint="@string/enert_you_quantity"
            android:inputType="number"
            android:paddingLeft="5dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/text"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/text"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_background2"
            android:gravity="center"
            android:onClick="save"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="100dp"
            android:layout_height="50dp"

            android:layout_alignBaseline="@+id/btnSave"
            android:layout_alignBottom="@+id/btnSave"
            android:layout_alignLeft="@+id/text"
            android:layout_alignStart="@+id/text"
            android:background="@drawable/button_background2"
            android:gravity="center"
            android:onClick="Cancel"
            android:text="@string/cancel" />


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
